feat/ base fotter and css

--- a/palamo-demo/src/styles/variables.scss
+++ b/palamo-demo/src/styles/variables.scss
@@ -11,6 +11,7 @@ $clr-prm: #B78EFF;
 $clr-acc: #000CF0;
 $clr-snd: #24FF86;
 $clr-black: #000224;
+$clr-bg: #F6F6F6;
 
 //paddings
 $base-padding: 24px;
