--- a/palamo-demo/src/App.scss
+++ b/palamo-demo/src/App.scss
@@ -1,4 +1,5 @@
 @import './index.scss';
 @import './fonts/fonts.scss';
 @import './styles/variables.scss';
-
+@import './styles/scene.scss';
+@import './styles/footer.scss';
