adding scene component with basic hooks and fuctions

--- a/palamo-demo/src/App.scss
+++ b/palamo-demo/src/App.scss
@@ -4,4 +4,5 @@
 @import '~antd/dist/antd.css';
 
 @import './styles/variables.scss';
-@import './styles/footer.scss';
+@import './components/Footer/footer.scss';
+@import './components/Scene/scene.scss';
