--- a/palamo-demo/src/components/Scene/scene.scss
+++ b/palamo-demo/src/components/Scene/scene.scss
@@ -29,5 +29,49 @@
         top: 50%;
         left: 30%;
         transform: translate(-50%, -50%);
+        overflow: hidden;
+
+        img {
+            visibility: hidden;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
+
+    .matte {
+        animation: matte 2s ease-in-out  infinite;
+    }
+
+    .shiny{
+        animation: shiny 2s ease-in-out  infinite;
+    }
+
+    @keyframes matte{
+        0% {
+          transform: translate(0, 0);
+        }
+
+        50% {
+            transform: translate(-50%, -50%);
+        }
+
+        100% {
+            transform: translate(0, 0);
+        }
+      }
+
+      @keyframes shiny{
+        10% {
+            transform: translate(0, 0);
+          }
+  
+          50% {
+              transform: translate(50%, 50%);
+          }
+  
+          100% {
+              transform: translate(0, 0);
+          }
+      }
 }
