--- a/palamo-demo/src/styles/variables.scss
+++ b/palamo-demo/src/styles/variables.scss
@@ -12,6 +12,7 @@ $clr-acc: #000CF0;
 $clr-snd: #24FF86;
 $clr-black: #000224;
 $clr-bg: #F6F6F6;
+$clr-white: white;
 
 //paddings
 $base-padding: 24px;
