--- a/palamo-demo/src/components/Scene/scene.scss
+++ b/palamo-demo/src/components/Scene/scene.scss
@@ -45,6 +45,15 @@
         }
     }
 
+    .bleed {
+        z-index: $layer-4;
+        position: fixed;
+        top: 50%;
+        left: 30%;
+        transform: translate(-50%, -50%);
+        border: $clr-acc dashed 1px;
+    }
+
     .matte {
         animation: matte 2s ease-in-out  infinite;
     }
