--- a/palamo-demo/src/App.scss
+++ b/palamo-demo/src/App.scss
@@ -7,3 +7,4 @@
 @import './components/Footer/footer.scss';
 @import './components/Scene/scene.scss';
 @import './components/ConfiguratorOptions/ConfiguratorOptions.scss';
+@import './components/Ruler/ruler.scss'
