--- a/palamo-demo/src/styles/variables.scss
+++ b/palamo-demo/src/styles/variables.scss
@@ -13,6 +13,7 @@ $clr-snd: #24FF86;
 $clr-black: #000224;
 $clr-bg: #F6F6F6;
 $clr-white: white;
+$clr-gray: #D9D9D9;
 
 //paddings
 $base-padding: 24px;
